--- a/gioithieu.html
+++ b/gioithieu.html
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div class="end-intro-pain end-pain">
+        <div class="end-intro-pain">
             <img src="https://www.w3schools.com/w3images/map.jpg" alt="" style="width: 100%; margin-top: -8%;">
         </div>
 
