--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="/">Trang chủ</a></li>
-                    <li><a href="./gioithieu.html">Giới thiệu</a></li>
-                    <li><a href="./lienhe.html">Liên hệ</a></li>
+                    <li><a href="/" title="Trang chủ">Trang chủ</a></li>
+                    <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
+                    <li><a href="./lienhe.html" title="Liên hệ">Liên hệ</a></li>
                     <li>
-                        <a href="#myblog">
+                        <a href="#myblog" title="Blog">
                             Blog
                             <i class="nav-arrow-down ti-angle-down"></i>
                         </a>
                         <ul class="menu-nav">
-                            <li><a href="#khampha">Khám Phá</a></li>
-                            <li><a href="#dulichbui">Du lịch Bụi</a></li>
-                            <li><a href="#billbalo">Bill Balo</a></li>
+                            <li><a href="#khampha" title="Khám phá">Khám Phá</a></li>
+                            <li><a href="#dulichbui" title="Du lịch bụi">Du lịch Bụi</a></li>
+                            <li><a href="#billbalo" title="Bill balo">Bill Balo</a></li>
                         </ul>
                     </li>
                 </ul>
