--- a/gioithieu.html
+++ b/gioithieu.html
@@ -29,7 +29,7 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="/">Trang chủ</a></li>
+                    <li><a href="./index.html">Trang chủ</a></li>
                     <li><a href="#gioithieu">Giới thiệu</a></li>
                     <li><a href="./lienhe.html">Liên hệ</a></li>
                     <li>
