--- a/lienhe.html
+++ b/lienhe.html
@@ -29,7 +29,7 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="/" title="Trang chủ">Trang chủ</a></li>
+                    <li><a href="./index.html" title="Trang chủ">Trang chủ</a></li>
                     <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
                     <li><a href="#lienhe" title="Liên hệ">Liên hệ</a></li>
                     <li>
