--- a/gioithieu.html
+++ b/gioithieu.html
@@ -44,9 +44,12 @@
                         </ul>
                     </li>
                 </ul>
-                <div class="search-btn">
-                    <i class="fa fa-search"></i>
-                </div>
+                <form action="" class="search-box">
+                    <input type="text" name="" value="" placeholder="Tìm kiếm...">
+                    <div class="search-pain">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </div>
+                </form>
             </nav>
         </div>
 
