--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <nav>
+                <img src="./img/akatsuki.png" title="Thanpain" class="logo" alt="Logo trang chủ" width="100%">
                 <ul class="menu">
                     <li><a href="/" title="Trang chủ">Trang chủ</a></li>
                     <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
