--- a/gioithieu.html
+++ b/gioithieu.html
@@ -28,6 +28,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <nav>
+                <img src="./img/akatsuki.png" title="Thanpain" class="logo" alt="Logo trang chủ" width="100%">
                 <ul class="menu">
                     <li><a href="./index.html">Trang chủ</a></li>
                     <li><a href="#gioithieu">Giới thiệu</a></li>
