--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <nav>
                 <img src="./img/akatsuki.png" title="Thanpain" class="logo" alt="Logo trang chủ" width="100%">
                 <ul class="menu">
-                    <li><a href="/" title="Trang chủ">Trang chủ</a></li>
+                    <li><a href="index.html" title="Trang chủ">Trang chủ</a></li>
                     <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
                     <li><a href="./lienhe.html" title="Liên hệ">Liên hệ</a></li>
                     <li>
-                        <a href="#myblog" title="Blog">
+                        <a href="blog.html" title="Blog">
                             Blog
                             <i class="nav-arrow-down ti-angle-down"></i>
                         </a>
