--- a/lienhe.html
+++ b/lienhe.html
@@ -34,7 +34,7 @@
                     <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
                     <li><a href="#lienhe" title="Liên hệ">Liên hệ</a></li>
                     <li>
-                        <a href="#myblog" title="Blog">
+                        <a href="blog.html" title="Blog">
                             Blog
                             <i class="nav-arrow-down ti-angle-down"></i>
                         </a>
