--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
             <nav>
                 <img src="./img/akatsuki.png" title="Thanpain Home page" class="logo" alt="Logo trang chủ" width="100%">
                 <ul class="menu">
-                    <li><a href="/" title="Trang chủ">Trang chủ</a></li>
+                    <li><a href="./index.html" title="Trang chủ">Trang chủ</a></li>
                     <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
                     <li><a href="./lienhe.html" title="Liên hệ">Liên hệ</a></li>
                     <li>
