--- a/gioithieu.html
+++ b/gioithieu.html
@@ -68,41 +68,8 @@
             </div>
         </div>
         
-        <div class="introduce">
-            <div class="image-introduce">
-                <img class="me-intro" src="./img/me-1.png" alt="">
-            </div>
-            <div class="thongtin">
-                <div class="pain-my-intro">
-                    <h2 class="my-introduce">MY INTRODUCE</h2>
-                </div>
-                <div class="pain-mota-intro">
-                    <p class="mota-introduce">Lập trình viên Frontend, Thiết kế Website, Coder</p>
-                </div>
-                <br>
-                <div class="pain-ten-intro">
-                    <p class="ten-introduce"><strong class="name-introduce">NAME: </strong>Nguyễn Hoàng Duy Nhất</p>
-                </div>
-                <div class="pain-bd-intro">
-                    <p class="birthday-introduce"><strong class="bd-introduce">BIRTHDAY: </strong>13/11/2002</p>
-                </div>
-                <div class="pain-adr-intro">
-                    <p class="address-introduce"><strong class="adr-introduce">ADDRESS: </strong>Da Nang, VN</p>
-                </div>
-                <div class="pain-ph-intro">
-                    <p class="phone-introduce"><strong class="ph-introduce">PHONE: </strong>0839445657</p>
-                </div>
-                <div class="pain-em-intro">
-                    <p class="email-introduce"><strong class="em-introduce">EMAIL: </strong>duynhat2471@gmail.com</p>
-                </div>
-                <div class="pain-wb-intro">
-                    <p class="website-introduce"><strong class="wb-introduce">WEBSITE: </strong>thanpain.github.io/thanpain</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="end-intro-pain">
-            <img src="https://www.w3schools.com/w3images/map.jpg" alt="" style="width: 100%; margin-top: -8%;">
+        <div>
+            Coming soon !!
         </div>
 
         <footer class="end">
