--- a/lienhe.html
+++ b/lienhe.html
@@ -57,7 +57,7 @@
         <!-- image -->
         <div class="background-image">
             <div class="image-nhat">
-                <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.15752-9/302074122_489161502767657_6007516221901310192_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=FWQU1o7g7LUAX9W-wkN&_nc_ht=scontent.fhan14-2.fna&oh=03_AdQNVvd__PE2z7FxtgJTljhYJj-S-vg7WqazMs981-Ug-A&oe=637C0C35" alt="" style="width: 100%">
+                <img src="./img/lienhe.jpg" alt="" style="width: 100%">
             </div>
             <div class="banthan-lienhe">
                 <p class="name-lienhe" style="color: white;">CONTACT</p>
