--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <img src="./img/akatsuki.png" title="Thanpain" class="logo" alt="Logo trang chủ" width="100%">
                 <ul class="menu">
                     <li><a href="index.html" title="Trang chủ">Trang chủ</a></li>
-                    <li><a href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a></li>
-                    <li><a href="./lienhe.html" title="Liên hệ">Liên hệ</a></li>
+                    <li><a href="#gioithieu" title="Giới thiệu">Giới thiệu</a></li>
+                    <li><a href="#lienhe" title="Liên hệ">Liên hệ</a></li>
                     <li>
                         <a href="blog.html" title="Blog">
                             Blog
